[gd_scene load_steps=13 format=3 uid="uid://d2r37kchbqrgt"]

[ext_resource type="Theme" uid="uid://dm4cuttmnq77h" path="res://resources/Themes/UI.tres" id="1_cabj8"]
[ext_resource type="Script" uid="uid://cojw6qjv3x5cf" path="res://Scripts/menu_principale.gd" id="1_q6s64"]
[ext_resource type="Texture2D" uid="uid://b2w2gomtx4jvu" path="res://assets/image/selfi2.png" id="3_heqfu"]
[ext_resource type="FontFile" uid="uid://bbebqc3744oj2" path="res://assets/fonts/Cinzel-Black.ttf" id="3_y4xp8"]
[ext_resource type="Script" uid="uid://u4s22cgr1865" path="res://Scripts/bouton.gd" id="4_heqfu"]
[ext_resource type="PackedScene" uid="uid://di1yncnaa65eb" path="res://Scenes/ui_option.tscn" id="5_heqfu"]

[sub_resource type="Animation" id="Animation_xe6lt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_y4xp8"]
resource_name = "fade_in"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.32987696, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cabj8"]
_data = {
&"RESET": SubResource("Animation_xe6lt"),
&"fade_in": SubResource("Animation_y4xp8")
}

[sub_resource type="LabelSettings" id="LabelSettings_heqfu"]
font_size = 73
font_color = Color(1, 0.8666667, 0, 1)
outline_size = 19
outline_color = Color(0, 0, 0, 1)
shadow_size = 21
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5.355, 4.37)

[sub_resource type="Gradient" id="Gradient_heqfu"]
offsets = PackedFloat32Array(0.8634752, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ni8uq"]
gradient = SubResource("Gradient_heqfu")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Menu_principal" type="Control" groups=["menu_principal"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cabj8")
script = ExtResource("1_q6s64")

[node name="fade" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="ColorRect" type="ColorRect" parent="fade"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade"]
libraries = {
&"": SubResource("AnimationLibrary_cabj8")
}
autoplay = "fade_in"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.11096
offset_top = -357.25
offset_right = 675.11096
offset_bottom = 357.25
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_heqfu")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 925

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play"
script = ExtResource("4_heqfu")

[node name="option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "option"
script = ExtResource("4_heqfu")

[node name="credit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "credit"
script = ExtResource("4_heqfu")

[node name="quitter" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "quitter"
script = ExtResource("4_heqfu")

[node name="titre" type="Label" parent="."]
z_index = 12
layout_mode = 1
offset_left = 25.0
offset_top = 30.0
offset_right = 952.0
offset_bottom = 251.0
theme_override_colors/font_color = Color(1, 0.98333335, 0, 1)
theme_override_constants/outline_size = 56
theme_override_fonts/font = ExtResource("3_y4xp8")
theme_override_font_sizes/font_size = 80
text = "Nightmare or dream"
label_settings = SubResource("LabelSettings_heqfu")
horizontal_alignment = 1

[node name="option" parent="." instance=ExtResource("5_heqfu")]
visible = false
z_index = 20
layout_mode = 1
offset_left = 278.0
offset_top = 130.0
offset_right = -81.0
offset_bottom = -37.0

[node name="vignette" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_ni8uq")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/play" to="MarginContainer/VBoxContainer/play" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/option" to="MarginContainer/VBoxContainer/option" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/credit" to="MarginContainer/VBoxContainer/credit" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/quitter" to="MarginContainer/VBoxContainer/quitter" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quitter" to="." method="_on_quitter_pressed"]
[connection signal="pressed" from="option/back" to="." method="_on_back_pressed"]

[editable path="option"]
